# group04092025

./: README.md
project/: .env-example  README.md  config.py  conftest.py  models.py  pyproject.toml
project/databases/: main.py
project/difficult_themes/: decorators_with_params.py  difficult_topics.py  example.json  practice.py  unpacking.py
project/generators/: custom.py
project/redis_service/: base.py
project/revision/: __init__.py  functions_utils.py  main.py
project/services/: logger.py
project/tests/: test_bank.py  test_integration.py  test_person.py  test_person2.py  test_utils.py
project/tokens/: index.html  work_with_base64.py  work_with_jwt.py
project/working_with_files/: s3.py  work_with_binary_files.py
